1. Code Cleanup 2. Network check

--- a/app/src/main/res/layout/activity_facts.xml
+++ b/app/src/main/res/layout/activity_facts.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".FactsActivity">
 
@@ -10,7 +11,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#1976D2" />
+        android:background="#1976D2"
+        app:titleTextColor="#FFF"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/factsRecyclerView"
