--- a/app/src/main/res/layout/facts_list_adapter.xml
+++ b/app/src/main/res/layout/facts_list_adapter.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="110dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="5dp"
     android:layout_marginRight="5dp"
@@ -12,12 +12,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/lblTitle"
-            android:layout_width="match_parent"
-            android:layout_height="40dp" />
+            style="@style/TextTitle" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,14 +27,11 @@
 
             <TextView
                 android:id="@+id/lblDescription"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+                style="@style/TextDescription" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgFacts"
-                android:layout_width="50dp"
-                android:layout_height="50dp" />
+                style="@style/CircleImage" />
         </LinearLayout>
 
     </LinearLayout>
