--- a/app/src/main/res/layout/activity_facts.xml
+++ b/app/src/main/res/layout/activity_facts.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".FactsActivity">
 
@@ -12,7 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#1976D2"
-        app:titleTextColor="#FFF"/>
+        app:titleTextColor="#FFF" />
+
+    <ProgressBar
+        android:id="@+id/progressDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/factsRecyclerView"
